<resources>
    <string name="app_name">Campus Explorer</string>

    <!--About-->
    <string name="about_intro_textview_1">Welcome to</string>
    <string name="about_intro_textview_2">Campus Explorer!</string>
    <string name="about_sub_textview">A convenience application designed for any student or visitor
        at University of Michigan - Ann Arbor who is interested in navigating and learning about our
        beautiful campus more efficiently.</string>

    <string name="tutorial_button">Tutorial</string>
    <string name="about_goto_categories_button">Explore the Campus</string>

    <string name="about_footer_disclaimer">This is a personal project and was not developed on the
        behalf of University of Michigan.</string>
    <string name="about_footer_email">To report any errors/misinformation or ask any questions,
        feel free to email me at jjian@umich.edu.</string>


    <!--Tutorial slides-->
    <string name="tutorial_title">Tutorial</string>
    <string name="tutorial_textview_intro">Campus Explorer accelerates the process of finding the
        information you need with its custom search features.
    </string>
    <string name="tutorial_textview_categories">The home menu offers a list of seven building
        categories to choose from, including the option to see all buildings on campus!</string>
    <string name="tutorial_textview_buildings_campus">The radio buttons at the bottom of each list
        allow you to filter the displayed buildings by their locations.</string>
    <string name="tutorial_textview_buildings_search">Alternatively, you can utilize the custom
        search-view if you have a specific building name in mind.</string>
    <string name="tutorial_textview_building_info">Selecting a building name displays helpful
        information about the building, including an interactive web-view of its website.</string>
    <string name="tutorial_textview_favoriting">Tap on the star next to the building name to save the
        building to your Favorites list, which you can easily access in the home menu.</string>
    <string name="tutorial_textview_directions">Tap on the Directions button to launch Google Maps
        with a uniquely encoded url. No need to type in your starting point or destination! </string>
    <string name="tutorial_textview_outro">I hope you enjoy using with the app as much as I enjoyed
        making it :) Once again, please contact me at jjian@umich.edu with any questions! - James Jiang</string>

    <!--Restore-->
    <string name="restore_title">Restoring the App</string>
    <string name="restore_description">Restoring Campus Explorer will remove all buildings from your
        Favorites list and bring you back to the app tutorial as a first-time user. Please confirm.
    </string>
    <string name="restore_button">Restore</string>
    <string name="restore_back_button">Back to Home</string>

    <!--Categories-->
    <string name="academic_button">Academic</string>
    <string name="administrative_button">Administrative</string>
    <string name="housing_libraries_button">Housing + Libraries</string>
    <string name="medical_button">Medical</string>
    <string name="sports_student_life_button">Sports + Student Life</string>
    <string name="favorites_button">Favorites</string>
    <string name="all_button">All Buildings</string>

    <!--Buildings list-->
    <string name="list_search_hint">Search</string>
    <string name="list_radio_all">All</string>
    <string name="list_radio_central">Central</string>
    <string name="list_radio_north">North</string>
    <string name="list_radio_other">Other</string>

    <!--Building Info-->
    <string name="info_category_textview">Category</string>
    <string name="info_area_textview">Area</string>
    <string name="info_website_button">Website</string>
    <string name="info_directions_button">Directions</string>

    <string name="info_webview_uri_beginning">https://campusinfo.umich.edu/building-search/building/</string>
    <string name="info_map_uri_beginning">
        https://www.google.com/maps/dir/?api=1&amp;destination=
    </string>
    <string name="info_map_uri_end">
        %2C+Ann+Arbor%2C+MI
    </string>
    <string name="webview_back_button"><![CDATA[<]]></string>
    <string name="webview_forward_button"><![CDATA[>]]></string>

</resources>
